Prevent layout shifting by preloading optional fonts

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@
 html {
   font-size: 16px;
   font-family: "Roboto", sans-serif;
+  font-display: optional;
 }
 
 body {
